# galbot_g1

./: .gitignore  README.md  pyproject.toml
com_configs/: default.py  eval.py  train.py
galbot/core_proto/: header_pb2.py  math_pb2.py  time_pb2.py
galbot/sensor_proto/: camera_pb2.py  effort_pb2.py  image_pb2.py  imu_pb2.py  joint_pb2.py  joy_pb2.py  roi_pb2.py
galbot/singorix_proto/: singorix_command_pb2.py  singorix_error_pb2.py  singorix_sensor_pb2.py  singorix_target_pb2.py
galbot/spatial_proto/: frame_pb2.py  pose_pb2.py  transform_pb2.py  twist_pb2.py  wrench_pb2.py
galbot/tf2_proto/: tf2_message_pb2.py
lerobot_robot_galbot_aio_ros2_ros/: __init__.py
robodriver_robot_galbot_aio_ros2/: __init__.py  calibrate.py  cameras.py  config.py  motors.py  node.py  node_dds.py  robot.py
